--- a/index.html
+++ b/index.html
@@ -8,9 +8,22 @@
 
     <!-- CSS -->
     <link rel="stylesheet" href="css/style.css">
-    
+
 </head>
 <body>
-    
+    <nav>
+        <ul>
+            <li><a href="#">1</a></li>
+            <li><a href="#">2</a></li>
+            <li><a href="#">3</a></li>
+        </ul>
+    </nav>
+    <div class="container">
+        <div class="scarpa">
+        </div>
+        <div class="scritta">
+            <!-- <h2>il nostro modello di punta</h2> -->
+        </div>
+    </div>
 </body>
 </html>
