--- a/index.html
+++ b/index.html
@@ -13,16 +13,17 @@
 <body>
     <nav>
         <ul>
-            <li><a href="#">1</a></li>
-            <li><a href="#">2</a></li>
-            <li><a href="#">3</a></li>
+            <li><a href="#primo">1</a></li>
+            <li><a href="#secondo">2</a></li>
+            <li><a href="#terzo">3</a></li>
         </ul>
     </nav>
-    <div class="container">
+    <div id="primo" class="container">
         <div class="scarpa">
+            <img src="img/01.png" alt="scarpa differente">
         </div>
         <div class="scritta">
-            <!-- <h2>il nostro modello di punta</h2> -->
+            <h2>il nostro modello di punta</h2>
         </div>
     </div>
 </body>
