insert container rimanenti

--- a/index.html
+++ b/index.html
@@ -26,5 +26,21 @@
             <h2>il nostro modello di punta</h2>
         </div>
     </div>
+    <div id="secondo" class="container">
+        <div class="scarpa">
+            <img src="img/02.png" alt="scarpa differente">
+        </div>
+        <div class="scritta">
+            <h2>il nostro modello di punta</h2>
+        </div>
+    </div>
+    <div id="terzo" class="container">
+        <div class="scarpa">
+            <img src="img/03.png" alt="scarpa differente">
+        </div>
+        <div class="scritta">
+            <h2>il nostro modello di punta</h2>
+        </div>
+    </div>
 </body>
 </html>
