--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 </head>
 <body>
+    <!-- menù -->
     <nav>
         <ul>
             <li><a href="#primo">1</a></li>
@@ -18,6 +19,8 @@
             <li><a href="#terzo">3</a></li>
         </ul>
     </nav>
+
+    <!-- prima scarpa -->
     <div id="primo" class="container">
         <div class="scarpa">
             <img src="img/01.png" alt="scarpa differente">
@@ -26,6 +29,8 @@
             <h2>il nostro modello di punta</h2>
         </div>
     </div>
+
+    <!-- seconda scarpa -->
     <div id="secondo" class="container">
         <div class="scarpa">
             <img src="img/02.png" alt="scarpa differente">
@@ -34,6 +39,8 @@
             <h2>il nostro modello di punta</h2>
         </div>
     </div>
+
+    <!-- terza scarpa -->
     <div id="terzo" class="container">
         <div class="scarpa">
             <img src="img/03.png" alt="scarpa differente">
